# libtools

./: .gitignore  .gitmodules  Dockerfile  README.md  build_linux_package.sh  buildme  buildme.py  install.sh  linux_bundler.sh  main.py  meson.build  myapp.sh  pyproject.toml
inc/: llvmlib.h  mylib-llvm.h  mylib.h
src/: createllvmlib.py  llvm-module.py  meson.build  myapp-dynamic.c  myapp-llvm.c  myapp.c  myapp_dyn.c  myapp_llvm  myapp_llvm.c  mylib-cffi-builder.py  mylib-cffi.c  mylib.c
src/libtools/: __init__.py  create_mylib_numba.py  mycallback_cffi.py  mycallback_numba.py  mylib-cffi.py  mylib-llvm.py  mylib_cffi.py  mylib_llvm.py
subprojects/: nanobind.wrap  robin-map.wrap
subprojects/ext-cxx/: pyproject.toml
tests/: test_buildme.py
