[project]
name = "libtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.63.1",
    "python-cxx",
]

[tool.uv.workspace]
members = [
    "subprojects/python-cxx",
]

[tool.uv.sources]
python-cxx = { workspace = true }
